FEAT (#29) : adds code syntax highlighting
Adds highlight.js

Adds a few basic styles to pre and code

Adds new fluid-type text variables

Implements highlight.js in the Layout comp

Adds support for Javascript, shell, and yaml

--- a/styles/fluid-type.module.css
+++ b/styles/fluid-type.module.css
@@ -2,4 +2,5 @@
   --fluid-type: min(max(1rem, 4vw), 40px);
   --fluid-type-h2: min(max(1rem, 4vw), 32px);
   --fluid-type-post: min(max(1rem, 4vw), 24px);
+  --fluid-type-code: min(max(1rem, 4vw), 16px);
 }
