--- a/styles/variables.module.css
+++ b/styles/variables.module.css
@@ -6,4 +6,10 @@
     --text-width: 100%;
     --text-width-tablet: 90%;
     --post-max-width: 800px;
+    --color-dark-blue: #00171f;
+    --color-navy: #003459;
+    --color-turquise: #007ea7;
+    --color-light-blue: #00a8e8;
+    --color-grey: #cecece;
+    --color-off-white: #f1f1f1;
   }
