--- a/components/Segment/segment.module.css
+++ b/components/Segment/segment.module.css
@@ -2,10 +2,10 @@
   height: 100vh;
   display: flex;
   flex-flow: column;
-  /* background-color: var(--color-dark-blue); */
+  background-color: var(--color-dark-blue);
   padding-top: 15vh;
   padding-bottom: 15vh;
-  background-image: radial-gradient(at 40% 20%, rgb(255, 184, 122) 0px, transparent 50%), radial-gradient(at 80% 0%, rgb(31, 221, 255) 0px, transparent 50%), radial-gradient(at 0% 50%, rgb(252, 222, 225) 0px, transparent 50%), radial-gradient(at 80% 50%, rgb(255, 133, 173) 0px, transparent 50%), radial-gradient(at 0% 100%, rgb(255, 181, 138) 0px, transparent 50%), radial-gradient(at 80% 100%, rgb(107, 102, 255) 0px, transparent 50%), radial-gradient(at 0% 0%, rgb(255, 133, 167) 0px, transparent 50%);
+  /* background-image: radial-gradient(at 40% 20%, rgb(255, 184, 122) 0px, transparent 50%), radial-gradient(at 80% 0%, rgb(31, 221, 255) 0px, transparent 50%), radial-gradient(at 0% 50%, rgb(252, 222, 225) 0px, transparent 50%), radial-gradient(at 80% 50%, rgb(255, 133, 173) 0px, transparent 50%), radial-gradient(at 0% 100%, rgb(255, 181, 138) 0px, transparent 50%), radial-gradient(at 80% 100%, rgb(107, 102, 255) 0px, transparent 50%), radial-gradient(at 0% 0%, rgb(255, 133, 167) 0px, transparent 50%); */
 
 }
 
